styles/_theme.scss
// theme color styles. All elements that have a background color should have one of these applied.
// The text class will be applied to the body element, if text is colored differently, apply it to the nearest
// parent container.

.clrP {
  background-color: $primary;

  input[type="radio"] + label:before {
    background-color: $secondary;
  }

  input[type="radio"]:checked + label:before {
    box-shadow: inset 0 0 0 3px $secondary;
  }
}

.clrS {
  background-color: $secondary;

  input[type="radio"] + label:before {
    background-color: $primary;
  }

  input[type="radio"]:checked + label:before {
    box-shadow: inset 0 0 0 3px $primary;
  }
}

input[type=range][class~="clrP"] {
  &::-webkit-slider-runnable-track {
    background-color: $secondary;
    border-color: $border;
  }
  &:focus::-webkit-slider-runnable-track {
    background-color: $secondary;
  }
  &::-webkit-slider-thumb {
    background-color: $primary;
  }
}

input[type=range][class~="clrS"] {
  &::-webkit-slider-runnable-track {
    background-color: $primary;
    border-color: $border;
  }
  &:focus::-webkit-slider-runnable-track {
    background-color: $primary;
  }
  &::-webkit-slider-thumb {
    background-color: $secondary;
  }
}

.clrBk {
  background-color: $background;
}

.clrT {
  @include textColor($text, $text2);
}

.clrT2 {
  @include textColor($text2, $text3);
}

.clrT3 {
  // links in text color 3 are the same color, or they'd be too hard to see
  @include textColor($text3);
}

.clrT4 {
  // links in text color 4 are the same color, or they'd be too hard to see
  @include textColor($text4);
}

.clrTGlow {
  // glow around text so it is visible on low-contrast backgrounds
  text-shadow: transparentize(invert($text), 0.6) 0 0 20px ;


}

.clrBr {
  border-color: $border;

  hr {
    border-color: $border;
  }
}

.clrBr2 {
  border-color: $border2;
}

// select2 dropdowns always use the theme border color.
// Override them in the view stylesheet if necessary.

.select2-container {
  .select2-dropdown,
  .select2-selection {
    border-color: $border;
  }
}

.clrBrBk {
  background-color: $border;
}

.clrTx1Br {
  border-color: $text;
}

.clrE1 {
  background-color: $emphasis1;
}

.clrO {
  // overlay color
  background-color: $overlay;
}

//shadows should be set by the theme too
.clrSh1 {
  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
}

.clrSh2  {
  box-shadow: 0 1px 0 rgba(0,0,0,0.05);
}

label.required::after {
  color: $emphasis2;
}

input,
select,
textarea,
button {
  &:focus {
    border-color: rgb(0, 0, 0);
  }
}

.select2-container--focus .select2-selection__rendered {
  border-color: rgb(0, 0, 0);
}

// select2 with tags
.select2Tags + .select2-container {
  &.select2-container--default {
    .select2-selection--multiple {
      border: 1px solid transparent;

      .select2-selection__rendered {
        border: 1px solid $border;
      }
    }

    &.select2-container--focus .select2-selection--multiple .select2-selection__rendered {
      border-color: rgb(0, 0, 0);
    }
  }

  .select2-selection__choice {
    background-color: $primary;
    border-color: $border;
    color: $text;
  }

  .select2-selection__choice__remove {
    color: $text;
  }
}

